<resources>
    <string name="app_name">Dukaan</string>
    <string name="your_plan">Your Plan</string>
    <string name="_100_free">100% FREE</string>
    <string name="mano_super_market">Mano Super Market</string>
    <string name="sellplus_com_mano"><u>sellplus.com/mano</u></string>
    <string name="home_header_message">Your customers can visit your online store and place the orders from this link.</string>
    <string name="share_more_to_earn_more">Share More to Earn More</string>
</resources>