<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/nice_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="120dp"/>

        <TextView
            android:drawablePadding="@dimen/size_6"
            android:layout_margin="@dimen/size_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextStyle5"
            android:text="@string/mano_super_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableRightCompat="@drawable/icons_global_verify" />

        <LinearLayout
            android:id="@+id/label"
            android:paddingHorizontal="@dimen/size_4"
            android:paddingVertical="@dimen/size_2"
            android:background="@drawable/bg_rounded_rec_white"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_12"
            android:layout_marginEnd="@dimen/size_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextStyle8"
                android:text="@string/your_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textAppearance="@style/TextStyle6"
                android:text="@string/_100_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <androidx.cardview.widget.CardView
            app:cardElevation="@dimen/size_6"
            android:id="@+id/header"
            android:layout_marginHorizontal="@dimen/size_16"
            app:cardCornerRadius="@dimen/size_6"
            android:layout_marginTop="@dimen/size_18"
            app:layout_constraintTop_toBottomOf="@id/label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/size_12"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelShare"
                    android:textAppearance="@style/TextStyle3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/share_more_to_earn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAppearance="@style/TextStyle9"
                    android:id="@+id/labelShareMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/size_4"
                    app:layout_constraintTop_toBottomOf="@id/labelShare"
                    android:text="@string/home_header_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAppearance="@style/TextStyleLink"
                    android:layout_marginTop="@dimen/size_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelShareMessage"
                    android:text="@string/sellplus_com_mano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/group_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:textAppearance="@style/TextStyle10"
            android:id="@+id/tvOverview"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginStart="@dimen/size_16"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:gravity="end"
            android:scrollbars="none"
            android:id="@+id/spinnerOverview"
            style="@style/SpinnerTheme"
            android:layout_marginEnd="@dimen/size_16"
            android:layout_marginTop="@dimen/size_26"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            android:minWidth="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_width="@dimen/size_0"
            app:spanCount="2"
            android:id="@+id/rvOverview"
            android:layout_marginTop="@dimen/size_12"
            tools:listitem="@layout/item_overview"
            tools:itemCount="4"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOverview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:textAppearance="@style/TextStyle10"
            android:id="@+id/labelActiveOrders"
            android:layout_marginTop="@dimen/size_32"
            android:layout_marginStart="@dimen/size_16"
            app:layout_constraintTop_toBottomOf="@id/rvOverview"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Active Orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvViewAll"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:drawableRight="@drawable/ic_chevron_right"
            android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@id/rvOverview"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="View All"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            style="@style/ChipTabLayout"
            app:tabMode="scrollable"
            app:tabGravity="center"
            app:tabPaddingStart="@dimen/size_16"
            app:tabPaddingEnd="@dimen/size_16"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:layout_marginTop="24dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelActiveOrders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="@dimen/size_0"
            android:paddingTop="@dimen/size_20"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:minHeight="400dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            tools:itemCount="3"
            tools:listitem="@layout/item_product" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
